--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dayjs": "^1.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=5173 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
