--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies and build
+      env:
+        REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_API_BASE_URL }}
       run: |
         yarn install
         CI=false yarn build
@@ -43,4 +45,4 @@ jobs:
           mv build current
           # 예: serve 설치 후 실행
           sudo pkill -f "serve" || true
-          sudo nohup npx serve -s current -l 3000 > serve.log 2>&1 &
+          sudo nohup npx serve -s current -l 5173 > serve.log 2>&1 &
