--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,5 +44,5 @@ jobs:
           rm -rf current
           mv build current
           # 예: serve 설치 후 실행
-          sudo pkill -f "serve" || true
+          sudo pkill -f "npx serve -s current" || true
           sudo nohup npx serve -s current -l 5173 > serve.log 2>&1 &
