--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,20 +43,10 @@ jobs:
           tar -xzf build.tar.gz
           rm -rf current
           mv build current
-          # 예: serve 설치 후 실행
-          sudo pkill -f "npx serve -s current" || true
-          sudo nohup npx serve -s current -l 5173 > serve.log 2>&1 &
 
-          echo "Waiting for server to be healthy..."
-          for i in {1..5}; do
-            sleep 2
-            if curl -sSf http://localhost:5173 > /dev/null; then
-              echo "✅ Health check passed!"
-              exit 0
-            else
-              echo "⏳ Waiting for app... attempt $i"
-            fi
-          done
+          sudo npm install -g pm2
+          pm2 delete react-app || true
+          pm2 start npx --name react-app -- serve -s current -l 5173
 
-          echo "❌ Health check failed after 5 attempts"
-          exit 1
+          pm2 save
+          pm2 startup | sudo tee /dev/null | bash
